feat: return fullname, name
