# src/internal/services/swagger/api.swagger.json
@@ -118,6 +118,48 @@
         ]
       }
     },
+    "/api/administrative-divisions/name": {
+      "get": {
+        "operationId": "Api_GetAdminDivName",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/citizenvGetAdminDivNameResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "CallerId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "adminDivId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "adminDivCode",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Api"
+        ]
+      }
+    },
     "/api/administrative-divisions/options": {
       "get": {
         "operationId": "Api_GetAdminDivOptions",
@@ -144,6 +186,12 @@
           },
           {
             "name": "CallerId",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "superiorCode",
             "in": "query",
             "required": false,
             "type": "string"
@@ -1085,6 +1133,32 @@
     },
     "citizenvDeleteCitizenResponseData": {
       "type": "object"
+    },
+    "citizenvGetAdminDivNameResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        },
+        "status": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "data": {
+          "$ref": "#/definitions/citizenvGetAdminDivNameResponseData"
+        }
+      }
+    },
+    "citizenvGetAdminDivNameResponseData": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string"
+        },
+        "fullName": {
+          "type": "string"
+        }
+      }
     },
     "citizenvGetAdminDivOptionsResponse": {
       "type": "object",
